--- a/bibliography.bib
+++ b/bibliography.bib
@@ -54,3 +54,9 @@
   timestamp = {2016.11.20}
 }
 
+@ELECTRONIC{kaggle,
+    title= {UFO Sightings},
+    howpublished = {Kaggle},
+    url = {https://www.kaggle.com/NUFORC/ufo-sightings},
+    }
+
